--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^5.0.0",
     "expo": "~47.0.12",
+    "expo-av": "13.0.3",
+    "expo-build-properties": "^0.5.1",
+    "expo-camera": "~13.1.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-webrtc": "^106.0.6",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
